# BrailleCard

./: .gitignore  GOAL.md  HANDOFF.md  LICENSE  README.md  pyproject.toml  scratchpad.md
deploy/: braillecard-demo.service  braillecard-resting.service
docs/: IMPLEMENTATION_WORKFLOW.md  JUDGE_DEMO_HOSTING.md  PRODUCT_GOAL.md  WEBSITE_ACCEPTANCE_MAP.md
docs/photos/reference-card-test-print/: README.md
docs/plans/: 2026-07-20-001-feat-local-render-slice-plan.md
examples/: card.json
examples/sample-output/: PRINTING_AND_FINISHING.md  QUALITY_CONTROL.md  README.md  braille.json  braille_review.html  card.gcode  checks.json  combined_card.3mf  combined_card.stl  geometry.json  manifest.json
profiles/: STOCK_PROFILE_PROVENANCE.md  reference_card_process_overrides.json
public/demo/: index.html
public/demo/artifacts/: braille_source.txt  braille_ueb.brf  braille_ueb_unicode.txt
public/resting/: index.html
public/resting/designer-preview/: index.html
scripts/: add-dorqlabs-hostname.sh  build_judge_demo.py  telegram_watcher.sh
src/braille_card/: __init__.py  __main__.py  braille.py  documents.py  geometry.py  images.py  moonraker.py  package.py  preview.py  quality.py  slicer.py  spec.py  web.py
tests/: test_braille.py  test_determinism.py  test_dimensions_and_quality.py  test_geometry.py  test_moonraker.py  test_preview.py  test_public_resting.py  test_web.py
tools/: bootstrap_orca.sh
