[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "braille-greeting-card"
version = "0.1.0"
description = "Deterministic offline generator for one flat 5x7 Braille greeting card"
requires-python = ">=3.11"
dependencies = ["Flask>=3.1,<4", "manifold3d==3.5.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
